...
        />
        <Text style={styles.description}>
          An electronic cash piggy bank for children that accepts bitcoin sent over lightning, while
          displaying the amount saved in satoshis
        </Text>
        <TouchableOpacity style={styles.button} onPress={() => navigation.navigate('Onboarding')}>
          <Text style={styles.buttonText}>Let's Go</Text>
        </TouchableOpacity>
        <Image
          source={require('../../assets/images/bitcoin-logo.png')}
          style={styles.bitcoinLogo}
          resizeMode="contain"
        />
...
